--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "material-react-table": "^3.2.0",
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
