--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "tiptap-extension-resizable-image": "^1.0.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
